# MCArchive-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  poe_tasks.toml  pyproject.toml  pytest.ini  semantic.toml
.github/workflows/: dev-ci.yaml  main-ci.yaml
scripts/: build.sh  clear.sh  run.sh
src/mcarchive/: main.py
src/mcarchive/app/api/: deps.py  routers.py
src/mcarchive/app/api/endpoints/: archive.py  token.py
src/mcarchive/app/utils/: constant.py  events.py  security.py
src/mcarchive/core/: config.py  decorator.py  logging.py  util.py
src/mcarchive/core/db/: models.py  session.py
src/mcarchive/core/db/crud/: __init__.py  archives.py  tokens.py
src/mcarchive/core/model/: archive.py  token.py
src/mcarchive/core/services/: aliyun_oss.py  archive_manage.py  thread_manage.py
tests/: conftest.py
tests/api/: test_eventgpt.py  test_user.py
